validator/openshift/backend/prod/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: f343b4-prod
  name: validator-backend
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"validator-backend:prod","namespace":"f343b4-tools"},"fieldPath":"spec.template.spec.containers[?(@.name==\"container\")].image","pause":"false"}]
spec:
  selector:
    matchLabels:
      app: validator-backend
  replicas: 3
  template:
    metadata:
      labels:
        app: validator-backend
    spec:
      containers:
        - name: container
          image: >-
            image-registry.openshift-image-registry.svc:5000/f343b4-tools/validator-backend@sha256:3eace9fa150703d2e74a03dccb22831e0ec0d31e5ad0b81d2c8e45049bb5eb23
          ports:
            - containerPort: 8080
              protocol: TCP
          env: []
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  paused: false
