validator/openshift/backend/prod/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: validator-backend
  namespace: f343b4-prod
  labels: {}
spec:
  to:
    kind: Service
    name: validator-backend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ""
  path: /
  port:
    targetPort: 3000
  alternateBackends: []
